objects/amc__Billing_Event_Item__c.object
<CustomObject>
    <description>The Billing Event Item object is a child object to the Billing Event Object and enables users to specify the line items relating to a billing event (e.g. invoice / credit)</description>
    <fields>
        <fullName>amc__Amount__c</fullName>
        <inlineHelpText>Identifies the net amount for this line item</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Billing_Event__c</fullName>
        <inlineHelpText>Links to the parent Billing Event record this item relates to</inlineHelpText>
        <label>Billing Event</label>
        <referenceTo>amc__Billing_Event__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>amc__Description__c</fullName>
        <inlineHelpText>Identifies the line item description</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Ledger_Code__c</fullName>
        <inlineHelpText>Identifies the Ledger Code relating to the items being charged on this record</inlineHelpText>
        <label>Ledger Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Tax_Amount__c</fullName>
        <inlineHelpText>Identifies the value of the tax to be applied for this line item. Will display 0.00 unless Tax Applicable = TRUE, then it will be auto-populated with Amount * Billing Event.Tax Rate</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if Tax is applicable to be applied to this line item</inlineHelpText>
        <label>Tax Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Rate__c</fullName>
        <description>Used in apex trigger to access parent Tax Rate. System field Only.</description>
        <formula>amc__Billing_Event__r.amc__Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Amount__c</fullName>
        <formula>amc__Amount__c +  amc__Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the gross amount for this line item (Amount + Tax Amount)</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Event Item</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Description__c</columns>
        <columns>amc__Billing_Event__c</columns>
        <columns>amc__Amount__c</columns>
        <columns>amc__Tax_Amount__c</columns>
        <columns>amc__Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Event Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Event Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>